# ChangeLog for net-news/liferea
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/liferea/ChangeLog,v 1.240 2013/12/26 14:48:07 maekke Exp $

  26 Dec 2013; Markus Meier <maekke@gentoo.org> liferea-1.10.3.ebuild:
  add ~arm, bug #489108

*liferea-1.10.3 (27 Oct 2013)

  27 Oct 2013; Víctor Ostorga <vostorga@gentoo.org> +liferea-1.10.3.ebuild:
  Liferea version bump

*liferea-1.10.1a (01 Aug 2013)

  01 Aug 2013; Sergei Trofimovich <slyfox@gentoo.org> +liferea-1.10.1a.ebuild:
  Version bump (fixes #477052 upstream).

*liferea-1.10.0 (13 Jul 2013)

  13 Jul 2013; Tom Wijsman <TomWij@gentoo.org> +liferea-1.10.0.ebuild:
  Version bump to 1.10.0. Fixes bug #455348, reported by and proxied commit for
  Yurieni.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  20 Nov 2012; Agostino Sarubbo <ago@gentoo.org> liferea-1.8.8.ebuild:
  Stable for x86, wrt bug #441490

  06 Nov 2012; <ago@gentoo.org> liferea-1.8.8.ebuild:
  Stable for amd64, wrt bug #441490

  05 Nov 2012; Anthony G. Basile <blueness@gentoo.org> liferea-1.8.8.ebuild:
  stable ppc ppc64, bug #441490

*liferea-1.8.11 (25 Dec 2012)

  25 Dec 2012; Victor Ostorga +liferea-1.8.11.ebuild:
  Version bump 1.8 branch

*liferea-1.9.6_p20121021 (21 Oct 2012)

  21 Oct 2012; Victor Ostorga +liferea-1.9.6_p20121021.ebuild:
  Version bump up to day git 1.9.6. Dropping ~ppc64 because 
  >=dev-libs/libpeas-1.0.0[gtk] hasn't that keyword

*liferea-1.8.8 (15 Sep 2012)

  15 Sep 2012; Víctor Ostorga <vostorga@gentoo.org> -liferea-1.8.4.ebuild,
  -liferea-1.8.7.ebuild, +liferea-1.8.8.ebuild:
  Dropping old versions, version bump to upstream's stable liferea version

  15 Sep 2012; Víctor Ostorga <vostorga@gentoo.org>
  liferea-1.9.4_p20120821.ebuild:
  Fixing missing gsettings-desktop-schemas dependency, bug #432510

*liferea-1.9.4_p20120821 (21 Aug 2012)
*liferea-1.8.7 (21 Aug 2012)
