@@ -6,6 +6,7 @@ AUX liferea-1.7.6-unread-feeds.patch 2837 SHA256 33545060f6043b67138e72783fce4df
 DIST liferea-1.10.0.tar.bz2 1406935 SHA256 cbea13ef4e43ac3cebb42be151bf6a80bece1ee257d7f2918cdda9f7833d24a1 SHA512 0b54db9bf871d1473f3f0c0070d88f7456e86f387e145c2a3fe0db610eef06ca827ea46d2a3191788c258d34c190ddee813780a094b6eee7324bf015e3a9d689 WHIRLPOOL 86f6e86d1a6b92f9639870a6a2cc52718da51d78d3b4797a15b7ed57a41f955c739dc0a0ec50bdfa15f37f35f50cd154b5b7897995e93f8bf82c64327d976226
 DIST liferea-1.10.1a.tar.bz2 1406998 SHA256 91001587c9eb07aa2e4e0b3536cbcfabbaa0057777c7e8712492e9e6bdd0a8ce SHA512 f5ac729d90b8238539f4b4dcc7fbb31fd9b3c26d980da3d5346ee0f4ccfb8fdf1e3ebebbe6bb5b8257eeeddf1992eb4589ef232ab84a178464a0832f73bf6d90 WHIRLPOOL a11660ee4ffc0a0a02a985153fa8c74f55d7f35bd4e0e90163172d6c466d9746c0f47fcb57b56f1673515b39d478c01e946cdc427b659050fc8fc5c53cf8bcb2
 DIST liferea-1.10.3.tar.bz2 1422704 SHA256 2a69b2edaf3f5e3c85726f91cd9f8ea9c8348807851cf6f348ac57ddf83854c7 SHA512 4df1f8849ecc4bfc3e9de3afcaca65447f1ad7f19bd707790df5b8437e1f9c095ecba3f9251ea5f3bff880f6bb9f01822634f0c37688fddc32203f12cf5c53eb WHIRLPOOL d40505e512c97e170c1d4f0f630dba93d64d8bad42fa418f5b2315e7bae0ec6536f57e0b60f8c5cedf9bbf41b9d6cd8404c42133b57863a8a212173ddfccebae
+DIST liferea-1.10.8.tar.bz2 1430531 SHA256 9dd7cb09f624c2f2765aadb139278f635032c9edd05d20a2b2405690546571b4 SHA512 bd77b8f7ae13de3dacad2f5b40db690c8172ccb8ccc698be036ea82ebdd3902015764b7f3f21ced50bc4f49bfb5d88df008be498701bd7433246dc000aad3964 WHIRLPOOL f6bb77a20998cef281d97013187dfb3594a76d4ba1f293c855a31caadd26f46ea5d3173770503b1babeca6cb7e5846b05a06dae2533ecb215d240100729d60e5
 DIST liferea-1.8.0.tar.gz 1870394 SHA256 0b5f4afa0cf5b9b93ce5e069747646b674ee414e6e0e637d975c09acf798ee37 SHA512 c5a487559522afd335db9afd334544b6d68ba043ae6bd56b2d8bfcaa781c8d9104b092be7482b6f6af382df2bb5edd828f219a33e3618864863fb5898df477e0 WHIRLPOOL 605159a8472ae90516b9fba157beb87a24675fe75933df41a50643b0161f0a7240a58320478c023bdcbc449c3aaf48d851bfa5b2e4a3fa00d6bebcc474172552
 DIST liferea-1.8.11.tar.bz2 1342834 SHA256 6054999442a5bafc81d0d99cd618920cf5ad063c28e92d8fe65d5c83ecb06cdb SHA512 39537d3e4dd88984fd09580e1478c8deacd3cf3da0c875ca7b69e6a46407e3d47cbbb5ace431fba7e1844b70928933f63958a2c371c2014d37a8530dac1c84bc WHIRLPOOL 9572a78d9f42a429cca7b8860480f2e71b127e4795643a3ddf1383e2589dbe9c521bae6efb56aa648391671fcbbad6dc548613a68135908764bf62288ffeef13
 DIST liferea-1.8.5.tar.gz 1864937 SHA256 d59ec17d3d10129d3c99fafb8a61aabdc06b610d578f05c01d7b7df0046e1fe8 SHA512 dd0650932d730883ca1744400dee0d23d85dfe7cd05f4826467e20c1624fa562b8e4b2ffc320aef66de50ef29d2aec97c153d554485c048443d16827b08580c9 WHIRLPOOL c01d14a04c5c4267d78bb3c665cfa05decbceebfe01548c6f8df7f2ac30602fbd24930289f6145b52fb8b01f46c653e569bd5ee67285df59dca00eab461a2ba9
@@ -15,18 +16,19 @@ DIST liferea-1.9.6_p20121021.tar.bz2 1045976 SHA256 3f27a5ae802932d04882e72f6ed5
 EBUILD liferea-1.10.0.ebuild 1741 SHA256 5c0ffcb40b799fdcb156f677c1b7fe354d6a927f9e28ffffa6c8bae5c795f94f SHA512 74b92611126027fe144febe1e22f0777bc147fd59b27c5fbbe7cc3f0a5d288c42e1a32fa7f4bb8d78de5cefb9de19d9c1c9c6de27bff366d8c2aa0923360bd49 WHIRLPOOL ccf10c32bdb62cf44d47f1348d388b161602b4c9b88039040c01e286e6b1cea736b1b5c196a7281a771fcdc6b37a10a2e4be184f57435f6bd388cad3f31a846a
 EBUILD liferea-1.10.1a.ebuild 1742 SHA256 a1b2167a1a5564a24112dfef53c6cfd75a20ac2cd3fc09ab94af2b2d12296702 SHA512 cd952775fc2ee3bd74be30e1be449522f2032ef437bb339bb165470546d28ae3f4590fdce11e6235e953cc2d372a4c78fdb0e272bc781ebf3793645b931c6f2e WHIRLPOOL 2d152719164591e022c7ffd3a3b273d916f574d013ee6d9cbfa08e6678356b9985e96db54f680b091b82f202f3fa0b16a9fefcb61d5ce1e754cb82085b1fe326
 EBUILD liferea-1.10.3.ebuild 1746 SHA256 8ef1f88df2f7c1e0e61e59a723b3bd156ac686d879be4a0196da8c3432d15901 SHA512 4c5d851152ba8ffa5f0c69ee9ca16eb648edcb5adc3675ee908755e0d1361be0f1dabf058d6cd79b35d6d39664e7cadd9ba54bb83f1b3ac65ade19c7d9352379 WHIRLPOOL b8c4a3693234593a2dc77856293b05b09b5292c8b13655bd160d6ec7fe5bb8572af0fca1e1b8df44acadc64dea9c256642c3e2200347d37a74a42a5d675f3269
+EBUILD liferea-1.10.8.ebuild 1759 SHA256 8d125aa481a7f5cf2d6f287cfbed04efc799e4740f2018ffa2f5562c63a56920 SHA512 3aad961a74920bf6c2feed01906538e6077f57cc8b95fbbd5b1f68fcd0db75758e92e65fbb3ec6035ecd68b20f0e56f5dacf769c431bacc0281e6bb833bff557 WHIRLPOOL a9e300b4f17fa4624aa39858544f24ae99e2c259b46ad0636a94b585fbd7563aec826cbebc8291c6239503a2cf2d4b24262028b7da9b8501caa11d82da591393
 EBUILD liferea-1.8.0.ebuild 1634 SHA256 65126d72afc526569ad79a835962127dce8a8f9ba87c83c99486cc8589d43efb SHA512 785179ff76cf406924e4127fe80ffca6bfcd2a5276c2550dd5cf33c0b9746036f1f7584421223c11996a7a705055703e99373a6789774c9595f5ef627cd0358c WHIRLPOOL 449a948714c337fd9b2ababba04c29e10b6d5df771360d05fe42012cc97ef40c95a9a3c5046178df29ffb87203cdfef9d0065ab27f28c1e3cd3664a14d95f8f0
 EBUILD liferea-1.8.11.ebuild 1637 SHA256 f39f29a4eeb84cdd270bbf04274823ca1626bca7d5d19ee7fc9b3959bfa45af2 SHA512 4074251869de59095776cf6ba7a75bb59d23f0bfe13dd2a3256528a323aa279e9b6df89bcf76def69d47bd227307e7097e3dea655cf62543c8d2bd8245dac65f WHIRLPOOL 7732b917ea119972c82bda0d3305a030e29a6e1452ca5146c36e14cc4426578694e968b653b824ecf9ff46730d7a45f4f59cd968219b2000a90ecb9faaef08b6
 EBUILD liferea-1.8.5.ebuild 1627 SHA256 8ad23652fa51cd1edccc1216acab9a4a8dd73020e81300e0aa45ffcce4137daf SHA512 61b7191e27eeab467841293f5a22304bef0acf4797bb4f0e138db03124aa137ebb8360b7350bf78351922af13a29e52003bb7bc0ff7e50dd8f61d46d5006d5a7 WHIRLPOOL 71300e707a764cc10d2690189a786fa1413609e644da55f3b4565deff1f901a4c29e6d1c27da30dc3e56e22393a2d7bb0126369a6527d9e8bed62469f53af316
 EBUILD liferea-1.8.8.ebuild 1626 SHA256 45a92a7f17f494afb140c0b1f05a39e12899f5ef0498bfdd16ad9e7d1a6f817e SHA512 84e63e36c75b280f6408379d3898918a9f7a91dc97e1f31296b8112d6f1c0f21d9c4b63eb3c64bcb8b8827e80302e3f59204217b7a5831e3bf4f44e38231f79b WHIRLPOOL 0b105e89ed93d10ce5f0d666afff92d1b258521ccea182db1bc31dad069d253b5501b522d84ada9b80b49dc12db8d19ab40879c18a4d40516caa16100698443c
 EBUILD liferea-1.9.4_p20120821.ebuild 1759 SHA256 8c60856930a1597e080993ac317b070cc56fbf734198c5863b3a7f88c812f2c7 SHA512 e3d4c5b6a3151fa224c0a440bfbab088714ed84f941492c8d17e0dc19342046e74838ad5b2f6008440841ae58c5ba03371397060fac667cf5ac59adb16f7eb55 WHIRLPOOL 5223c2e964db43cc157adc0c1595e2084b9e421ddee94826b512072fe5ba86f1cb9b976a43e64288c98106ed1f13aabf88ba76fe2bcd686b6da2808753cd45d4
 EBUILD liferea-1.9.6_p20121021.ebuild 1759 SHA256 7eee953ff44098524f23ea19192179fa45eb314a49d68c5bece96fd67c258d41 SHA512 ea13361565dda2ecb6e18b8d3aa16928f51862cfb8ae3b3d7e9edd7521601ba177cdd21c97aa4fb9e6ba6312515b99688442ce48c0f25995c4b4b0d283297cfa WHIRLPOOL fac185d27c5e2cb78278c09c2b88e140347047830d9016f9832ca26f3188d9ada577f8494936a09aba67b20ddadbb81c1108ca61615817d8e2b7ee78de245fef
-MISC ChangeLog 60427 SHA256 c6317139f28652a104e811e991c7e3a93dae68e63feb1b35a0802b15b41fe197 SHA512 5b8afa0482eb3495e68dcd5900d3e3a72f734d41bb3615643ebad7afe5ee4f42f182e1e39fbcd0fe81c9a86cbebef977a36c46c3698590c177fe597f221666f7 WHIRLPOOL 20a2289219f711781c26a3b5739eadc72f45cd9cdbd59479796e4c6251c7b21314dbfcd2536aba608058cf067c51204efed0e117d95a8594261c4680cd5d71ba
+MISC ChangeLog 60563 SHA256 a6f6529b6192add9954436b9ab43268f2916ca57cf5a201f44ad7e455101e4f9 SHA512 54c2487c46740cb90b3df609461a85268feac232c5f160b01bb3901e105ee173d29f6825aedbb7567e420c8279fc166a8b0628a477e177ae256195b5e6f0716e WHIRLPOOL a39e6fb46b5a5cf4f3dbdc974537cc5268a6ece41e189f92ac89389bc85e6e3b0d5cb97e37db119be3b315ea749673310b4fce6449e75ea1dbd95d59d395931b
 MISC metadata.xml 592 SHA256 6c2482fe7b59c334c10083e9dd52d90687f2ec278099f0d8dec82ec80620bcb3 SHA512 4dc39d448cf714fe617dd636dc2d5512344f0d8e89c40056a0d4702e7379ad20bff19722285980846ebef99c6e3c6accc14fe115fb5ca789616fcf32202c52d7 WHIRLPOOL 9f87d749e6bd5cce8f391c783dafb45c419961dec7e7ff8cd967e8eefecc2d3b68a3a715a83baae210d3f796697be63dbb782e41689f47b5991c6f6127574cb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK8Q1AACgkQkKaRLQcq0GKA4wCggYjz5UoE2Q4Q1o7kIJ/G/f8J
-O4wAoKw7EUI5s624Q63tOSmhRVFtBxcM
-=UOTn
+iEYEAREIAAYFAlNUEQQACgkQKQaZ7OJe4za2GACeOBkGrXjvbK8IyQOQj3OWaRhE
+idAAn1UzgWgDz3TGecL0m/XqTLfeHPxR
+=TrYp
 -----END PGP SIGNATURE-----
